@@ -1,2 +1,4 @@
-deblists -list=devel Work-needing
-Work-Needing and Prospective Packages
+deblists debian welcomes diversity
+June 6th
+deblists -m 20120606151810.GJ4839@camblue.cbg.collabora.co.uk
+June 6th
