@@ -1,3 +1,9 @@
+2013-04-24  Ian Beckwith  <ianb@erislabs.net>
+
+	* Rewrote deblists for new xapian search.
+	  + -author, -lists, -lang no longer supported.
+	  + added -ml and -mv to show message id links and list view.
+
 2012-10-22  Ian Beckwith  <ianb@erislabs.net>
 
 	* Fixed elvi: cisco, slashdot, slinuxdoc.
